NIFI-15259: Added REST API for Connectors
Introduced comprehensive REST endpoints for managing Connectors through
the NiFi web interface and API clients.

Key capabilities:
- Full lifecycle management (create, read, update, delete)
- Start/stop control with run status endpoints
- Multi-step configuration with property groups supporting string
  literals, asset references, and secret references
- Asynchronous configuration verification with polling support
- Access to connector's managed flow and process group status
- Search functionality within connector's encapsulated flow

Cluster support:
- Request replication across cluster nodes
- Response merging for dynamic property allowable values that may
  differ between nodes
- Consistent configuration step and property descriptor handling

Infrastructure:
- Audit logging for all connector configuration changes
- Authorization integration with NiFi's policy framework
- UI extension support for connector-specific interfaces
- Frontend updates for connector access policy management

--- a/nifi-docs/src/main/asciidoc/administration-guide.adoc
+++ b/nifi-docs/src/main/asciidoc/administration-guide.adoc
@@ -1510,6 +1510,11 @@ Global access policies govern the following system level authorizations:
 |Parameter Contexts
 |`/parameter-contexts`
 
+|access connectors
+|Allows users to view/modify Connectors
+|N/A
+|`/connectors`
+
 |query provenance
 |Allows users to submit a Provenance Search and request Event Lineage
 |Data Provenance
